...
            Column(
                modifier = if (saving) Modifier.clearAndSetSemantics {} else Modifier,
            ) {
                WhipEditorHeader(
                    navigationAction = {
                        IconButton(onClick = requestDismiss, enabled = !saving) {
                            Icon(Icons.Outlined.Close, contentDescription = "Cancel Task editing")
                        }
                    },
                    title = {
                        Text(
                            text = when {
                                request.task == null -> "Create Task"
...
